--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://api-maps.yandex.ru/2.1/?apikey=515e06c2-fc5d-4842-977e-cf5866e2f021&lang=ru_RU" type="text/javascript"></script>
 	<title>Document</title>
 </head>
 <body>
-	<div id="wrapper"></div>
+	<div id="wrapper">
+	</div>
 </body>
 </html>
