--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://api-maps.yandex.ru/2.1/?apikey=515e06c2-fc5d-4842-977e-cf5866e2f021&lang=ru_RU" type="text/javascript"></script>
-	<title>Document</title>
+	<title>Офшоры и банки</title>
 </head>
 <body>
 	<div id="wrapper">
